--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
@@ -41,7 +52,6 @@
         </address>
       </section>
     </header>
-    <main>
       <!--hero title-->
       <section>
         <h1>Effective Solutions for Your Business</h1>
@@ -94,6 +104,66 @@
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
+        </ul>
+      </section>
+      <!--our portfolio-->
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+            <li>
+                <img src="./images/img-2-2.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+                />
+                <h3>Banking App</h3>
+                <p>App</p>
+            </li>
+            <li>
+                <img src="./images/img-3-2.jpg"
+                alt="Cashless payment"
+                width="360"
+                height="300"
+                />
+                <h3>Cashless Payment</h3>
+                <p>Marketing</p>
+            </li>
+            <li>
+                <img src="./images/img-4-2.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+                />
+                <h3>Meditation App</h3>
+                <p>App</p>
+            </li>
+            <li>
+                <img src="./images/img-5-2.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+                />
+                <h3>Taxi Service</h3>
+                <p>Marketing</p>
+            </li>
+            <li>
+                <img src="./images/img-6-2.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+                />
+                <h3>Screen Illustrations</h3>
+                <p>Design</p>
+            </li>
+            <li>
+                <img src="./images/img-7-2.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+                />
+                <h3>Online Courses</h3>
+                <p>Marketing</p>
+            </li>
         </ul>
       </section>
     </main>
