--- a/index.html
+++ b/index.html
@@ -17,161 +17,164 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <!--logo header-->
       <section>
-        <a href="/">WEBSTUDIO</a>
+        <a href="index.html">WEBSTUDIO</a>
       </section>
       <!--navigation header-->
       <section>
         <nav>
           <ul>
             <li>
-              <a href="/">Studio</a>
+              <a class="navigation-header link" href="./index.html">Studio</a>
             </li>
             <li>
-              <a href="/">Portfolio</a>
+              <a class="navigation-header link" href="./index.html">Portfolio</a>
             </li>
             <li>
-              <a href="/">Contacts</a>
+              <a class="navigation-header link" href="./index.html">Contacts</a>
             </li>
           </ul>
         </nav>
       </section>
       <!--adress header-->
       <section>
-        <address>
+        <address class="address">
           <ul>
             <li>
-              <a href="mailto:info@devstudio.com"></a>
+              <a class="address-header link" href="mailto:info@devstudio.com">info@devstudio.com
+              </a>
             </li>
             <li>
-              <a href="tel:+11(000)111-11-11"></a>
+              <a class="address-header link" 
+              href="tel:+11(000)111-11-11">+11(000)111-11-11
+              </a>
             </li>
           </ul>
         </address>
       </section>
     </header>
       <!--hero title-->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero-section">
+        <h1 class="hero-title">Effective Solutions<br /> for Your Business</h1>
+        <button class="button" type="button">Order Service</button>
       </section>
       <!--advantages-->
       <section>
-        <h2>Strategy</h2>
-        <p>
+        <h2 class="strategy-title">Strategy</h2>
+        <p class="strategy-title-text">
           Our goal is to identify the business problem to walk away with the
           perfect and creative solution.
         </p>
-        <h2>Punctuality</h2>
-        <p>
+        <h2 class="punctuality-title">Punctuality</h2>
+        <p class="punctuality-title-text">
           Bring the key message to the brand's audience for the best price
           within the shortest possible time.
         </p>
-        <h2>Diligence</h2>
-        <p>
+        <h2 class="diligence-title">Diligence</h2>
+        <p class="diligence-title-text">
           Research and confirm brands with strongest digital growth
           opportunities and minimize risk.
         </p>
-        <h2>Technologies</h2>
-        <p>
+        <h2 class="technologies-title">Technologies</h2>
+        <p class="technologies-title-text">
           Design practice focused on digital experiences. We bring forth a deep
           passion for problem-solving.
         </p>
       </section>
       <!--team-->
       <section>
-        <h2>Our Team</h2>
+        <h2 class="our-team-section">Our Team</h2>
         <ul>
-          <li>
+          <li class="team-photo">
             <img src="images/img-8-2.jpg" width="264" alt="Mark Guerrero" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="name">Mark Guerrero</h3>
+            <p class="team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-photo">
             <img src="images/img-9-2.jpg" width="264" alt="Tom Ford" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="name">Tom Ford</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-photo">
             <img src="images/img-10-2.jpg" width="264" alt="Camila Garcia" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="name">Camila Garcia</h3>
+            <p class="team-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-photo">
             <img src="images/img-11-2.jpg" width="264" alt="Daniel Wilson" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="name">Daniel Wilson</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
       <!--our portfolio-->
-      <section>
-        <h2>Our Portfolio</h2>
+      <section class="our-portfolio">
+        <h2 class="our-portfolio-title">Our Portfolio</h2>
         <ul>
-            <li>
+            <li class="our-portfolio-picture">
                 <img src="./images/img-2-2.jpg"
                 alt="Banking App"
                 width="360"
                 height="300"
                 />
-                <h3>Banking App</h3>
-                <p>App</p>
+                <h3 class="our-portfolio-item">Banking App</h3>
+                <p class="our-portfolio-text">App</p>
             </li>
-            <li>
+            <li class="our-portfolio-picture">
                 <img src="./images/img-3-2.jpg"
                 alt="Cashless payment"
                 width="360"
                 height="300"
                 />
-                <h3>Cashless Payment</h3>
-                <p>Marketing</p>
+                <h3 class="our-portfolio-item">Cashless Payment</h3>
+                <p class="our-portfolio-text">Marketing</p>
             </li>
-            <li>
+            <li class="our-portfolio-picture">
                 <img src="./images/img-4-2.jpg"
                 alt="Meditation App"
                 width="360"
                 height="300"
                 />
-                <h3>Meditation App</h3>
-                <p>App</p>
+                <h3 class="our-portfolio-item">Meditation App</h3>
+                <p class="our-portfolio-text">App</p>
             </li>
-            <li>
+            <li class="our-portfolio-picture">
                 <img src="./images/img-5-2.jpg"
                 alt="Taxi Service"
                 width="360"
                 height="300"
                 />
-                <h3>Taxi Service</h3>
-                <p>Marketing</p>
+                <h3 class="our-portfolio-item">Taxi Service</h3>
+                <p class="our-portfolio-text">Marketing</p>
             </li>
-            <li>
+            <li class="our-portfolio-picture">
                 <img src="./images/img-6-2.jpg"
                 alt="Screen Illustrations"
                 width="360"
                 height="300"
                 />
-                <h3>Screen Illustrations</h3>
-                <p>Design</p>
+                <h3 class="our-portfolio-item">Screen Illustrations</h3>
+                <p class="our-portfolio-text">Design</p>
             </li>
-            <li>
+            <li class="our-portfolio-picture">
                 <img src="./images/img-7-2.jpg"
                 alt="Online Courses"
                 width="360"
                 height="300"
                 />
-                <h3>Online Courses</h3>
-                <p>Marketing</p>
+                <h3 class="our-portfolio-item">Online Courses</h3>
+                <p class="our-portfolio-text">Marketing</p>
             </li>
         </ul>
       </section>
     </main>
     <!--footer section-->
-    <footer>
+    <footer class="footer">
       <section>
-        <a href="/">WEBSTUDIO</a>
-        <p>
+        <a href="index.html">WEBSTUDIO</a>
+        <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
