--- a/index.html
+++ b/index.html
@@ -19,45 +19,46 @@
   <body>
     <header class="header">
       <!--logo header-->
-      <section>
-        <a href="index.html">WEBSTUDIO</a>
-      </section>
+      <a class="logo-header" href="index.html"
+        >WEB<span class="color-studio-header">STUDIO</span></a
+      >
       <!--navigation header-->
-      <section>
-        <nav>
-          <ul>
-            <li>
-              <a class="navigation-header link" href="./index.html">Studio</a>
-            </li>
-            <li>
-              <a class="navigation-header link" href="./index.html">Portfolio</a>
-            </li>
-            <li>
-              <a class="navigation-header link" href="./index.html">Contacts</a>
-            </li>
-          </ul>
-        </nav>
-      </section>
+      <nav class="navigation-header">
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="./index.html">Studio</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="./index.html">Portfolio</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="./index.html">Contacts</a>
+          </li>
+        </ul>
+      </nav>
       <!--adress header-->
-      <section>
-        <address class="address">
-          <ul>
-            <li>
-              <a class="address-header link" href="mailto:info@devstudio.com">info@devstudio.com
-              </a>
-            </li>
-            <li>
-              <a class="address-header link" 
-              href="tel:+11(000)111-11-11">+11(000)111-11-11
-              </a>
-            </li>
-          </ul>
-        </address>
-      </section>
+      <address class="address">
+        <ul class="adress-list">
+          <li class="address-item">
+            <a class="address-header-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com
+            </a>
+          </li>
+          <li class="address-item">
+            <a class="address-header-link" href="tel:+11(000)111-11-11"
+              >+11(000)111-11-11
+            </a>
+          </li>
+        </ul>
+      </address>
     </header>
+    <main>
       <!--hero title-->
       <section class="hero-section">
-        <h1 class="hero-title">Effective Solutions<br /> for Your Business</h1>
+        <h1 class="hero-title">
+          Effective Solutions<br />
+          for Your Business
+        </h1>
         <button class="button" type="button">Order Service</button>
       </section>
       <!--advantages-->
@@ -86,25 +87,45 @@
       <!--team-->
       <section>
         <h2 class="our-team-section">Our Team</h2>
-        <ul>
+        <ul class="our-team-list">
           <li class="team-photo">
-            <img src="images/img-8-2.jpg" width="264" alt="Mark Guerrero" />
-            <h3 class="name">Mark Guerrero</h3>
+            <img
+              src="images/img-8-2.jpg"
+              class="team-photo"
+              width="264"
+              alt="Mark Guerrero"
+            />
+            <h3 class="team-item">Mark Guerrero</h3>
             <p class="team-text">Product Designer</p>
           </li>
           <li class="team-photo">
-            <img src="images/img-9-2.jpg" width="264" alt="Tom Ford" />
-            <h3 class="name">Tom Ford</h3>
+            <img
+              src="images/img-9-2.jpg"
+              class="team-photo"
+              width="264"
+              alt="Tom Ford"
+            />
+            <h3 class="team-item">Tom Ford</h3>
             <p class="team-text">Frontend Developer</p>
           </li>
           <li class="team-photo">
-            <img src="images/img-10-2.jpg" width="264" alt="Camila Garcia" />
-            <h3 class="name">Camila Garcia</h3>
+            <img
+              src="images/img-10-2.jpg"
+              class="team-photo"
+              width="264"
+              alt="Camila Garcia"
+            />
+            <h3 class="team-item">Camila Garcia</h3>
             <p class="team-text">Marketing</p>
           </li>
           <li class="team-photo">
-            <img src="images/img-11-2.jpg" width="264" alt="Daniel Wilson" />
-            <h3 class="name">Daniel Wilson</h3>
+            <img
+              src="images/img-11-2.jpg"
+              class="team-photo"
+              width="264"
+              alt="Daniel Wilson"
+            />
+            <h3 class="team-item">Daniel Wilson</h3>
             <p class="team-text">UI Designer</p>
           </li>
         </ul>
@@ -112,68 +133,76 @@
       <!--our portfolio-->
       <section class="our-portfolio">
         <h2 class="our-portfolio-title">Our Portfolio</h2>
-        <ul>
-            <li class="our-portfolio-picture">
-                <img src="./images/img-2-2.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-                />
-                <h3 class="our-portfolio-item">Banking App</h3>
-                <p class="our-portfolio-text">App</p>
-            </li>
-            <li class="our-portfolio-picture">
-                <img src="./images/img-3-2.jpg"
-                alt="Cashless payment"
-                width="360"
-                height="300"
-                />
-                <h3 class="our-portfolio-item">Cashless Payment</h3>
-                <p class="our-portfolio-text">Marketing</p>
-            </li>
-            <li class="our-portfolio-picture">
-                <img src="./images/img-4-2.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-                />
-                <h3 class="our-portfolio-item">Meditation App</h3>
-                <p class="our-portfolio-text">App</p>
-            </li>
-            <li class="our-portfolio-picture">
-                <img src="./images/img-5-2.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-                />
-                <h3 class="our-portfolio-item">Taxi Service</h3>
-                <p class="our-portfolio-text">Marketing</p>
-            </li>
-            <li class="our-portfolio-picture">
-                <img src="./images/img-6-2.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-                />
-                <h3 class="our-portfolio-item">Screen Illustrations</h3>
-                <p class="our-portfolio-text">Design</p>
-            </li>
-            <li class="our-portfolio-picture">
-                <img src="./images/img-7-2.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-                />
-                <h3 class="our-portfolio-item">Online Courses</h3>
-                <p class="our-portfolio-text">Marketing</p>
-            </li>
+        <ul class="our-portfolio-list">
+          <li class="our-portfolio-picture">
+            <img
+              src="./images/img-2-2.jpg"
+              alt="Banking App"
+              width="360"
+              height="300"
+            />
+            <h3 class="our-portfolio-item">Banking App</h3>
+            <p class="our-portfolio-text">App</p>
+          </li>
+          <li class="our-portfolio-picture">
+            <img
+              src="./images/img-3-2.jpg"
+              alt="Cashless payment"
+              width="360"
+              height="300"
+            />
+            <h3 class="our-portfolio-item">Cashless Payment</h3>
+            <p class="our-portfolio-text">Marketing</p>
+          </li>
+          <li class="our-portfolio-picture">
+            <img
+              src="./images/img-4-2.jpg"
+              alt="Meditation App"
+              width="360"
+              height="300"
+            />
+            <h3 class="our-portfolio-item">Meditation App</h3>
+            <p class="our-portfolio-text">App</p>
+          </li>
+          <li class="our-portfolio-picture">
+            <img
+              src="./images/img-5-2.jpg"
+              alt="Taxi Service"
+              width="360"
+              height="300"
+            />
+            <h3 class="our-portfolio-item">Taxi Service</h3>
+            <p class="our-portfolio-text">Marketing</p>
+          </li>
+          <li class="our-portfolio-picture">
+            <img
+              src="./images/img-6-2.jpg"
+              alt="Screen Illustrations"
+              width="360"
+              height="300"
+            />
+            <h3 class="our-portfolio-item">Screen Illustrations</h3>
+            <p class="our-portfolio-text">Design</p>
+          </li>
+          <li class="our-portfolio-picture">
+            <img
+              src="./images/img-7-2.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
+            />
+            <h3 class="our-portfolio-item">Online Courses</h3>
+            <p class="our-portfolio-text">Marketing</p>
+          </li>
         </ul>
       </section>
     </main>
     <!--footer section-->
     <footer class="footer">
       <section>
-        <a href="index.html">WEBSTUDIO</a>
+        <a class="logo-footer" href="index.html"
+          >WEB<span class="color-studio-footer">STUDIO</span></a
+        >
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
