--- a/index.html
+++ b/index.html
@@ -4,202 +4,221 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
-    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
-      <!--logo header-->
-      <a class="logo-header" href="index.html"
-        >WEB<span class="color-studio-header">STUDIO</span></a
-      >
-      <!--navigation header-->
-      <nav class="navigation-header">
-        <ul class="navigation-list">
-          <li class="navigation-item">
-            <a class="navigation-link" href="./index.html">Studio</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="./index.html">Portfolio</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="./index.html">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <!--adress header-->
-      <address class="address">
-        <ul class="adress-list">
-          <li class="address-item">
-            <a class="address-header-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com
-            </a>
-          </li>
-          <li class="address-item">
-            <a class="address-header-link" href="tel:+11(000)111-11-11"
-              >+11(000)111-11-11
-            </a>
-          </li>
-        </ul>
-      </address>
+      <div class="container header-container">
+        <nav class="navigation-header">
+          <a class="logo-header" href="index.html"
+            >WEB<span class="color-studio-header">STUDIO</span></a
+          >
+          <!--navigation header-->
+          <ul class="navigation-list">
+            <li class="navigation-item">
+              <a class="navigation-link" href="./index.html">Studio</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="./index.html">Portfolio</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="./index.html">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <!--adress header-->
+        <address class="address">
+          <ul class="address-list">
+            <li class="address-item">
+              <a class="address-header-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com
+              </a>
+            </li>
+            <li class="address-item">
+              <a class="address-header-link" href="tel:+11(000)111-11-11"
+                >+11(000)111-11-11
+              </a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!--hero title-->
-      <section class="hero-section">
-        <h1 class="hero-title">
-          Effective Solutions<br />
-          for Your Business
-        </h1>
-        <button class="button" type="button">Order Service</button>
+      <section class="hero-section section-style">
+        <div class="container hero-container">
+          <h1 class="hero-title">
+            Effective Solutions<br />
+            for Your Business
+          </h1>
+          <button class="button" type="button">Order Service</button>
+        </div>
       </section>
       <!--advantages-->
-      <section>
-        <h2 class="strategy-title">Strategy</h2>
-        <p class="strategy-title-text">
-          Our goal is to identify the business problem to walk away with the
-          perfect and creative solution.
-        </p>
-        <h2 class="punctuality-title">Punctuality</h2>
-        <p class="punctuality-title-text">
-          Bring the key message to the brand's audience for the best price
-          within the shortest possible time.
-        </p>
-        <h2 class="diligence-title">Diligence</h2>
-        <p class="diligence-title-text">
-          Research and confirm brands with strongest digital growth
-          opportunities and minimize risk.
-        </p>
-        <h2 class="technologies-title">Technologies</h2>
-        <p class="technologies-title-text">
-          Design practice focused on digital experiences. We bring forth a deep
-          passion for problem-solving.
-        </p>
+      <section class="advantages section">
+        <div class="container">
+          <ul class="advantages-list">
+            <li class="advantages-item">
+              <h3 class="strategy-title">Strategy</h3>
+              <p class="strategy-title-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="punctuality-title">Punctuality</h3>
+              <p class="punctuality-title-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="diligence-title">Diligence</h3>
+              <p class="diligence-title-text">
+                Research and confirm brands with strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="technologies-title">Technologies</h3>
+              <p class="technologies-title-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--team-->
-      <section>
-        <h2 class="our-team-section">Our Team</h2>
-        <ul class="our-team-list">
-          <li class="team-photo">
-            <img
-              src="images/img-8-2.jpg"
-              class="team-photo"
-              width="264"
-              alt="Mark Guerrero"
-            />
-            <h3 class="team-item">Mark Guerrero</h3>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li class="team-photo">
-            <img
-              src="images/img-9-2.jpg"
-              class="team-photo"
-              width="264"
-              alt="Tom Ford"
-            />
-            <h3 class="team-item">Tom Ford</h3>
-            <p class="team-text">Frontend Developer</p>
-          </li>
-          <li class="team-photo">
-            <img
-              src="images/img-10-2.jpg"
-              class="team-photo"
-              width="264"
-              alt="Camila Garcia"
-            />
-            <h3 class="team-item">Camila Garcia</h3>
-            <p class="team-text">Marketing</p>
-          </li>
-          <li class="team-photo">
-            <img
-              src="images/img-11-2.jpg"
-              class="team-photo"
-              width="264"
-              alt="Daniel Wilson"
-            />
-            <h3 class="team-item">Daniel Wilson</h3>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="team section">
+        <div class="container">
+          <h2 class="our-team-section">Our Team</h2>
+          <ul class="our-team-list">
+            <li class="team-photo">
+              <img
+                src="images/img-8-2.jpg"
+                class="team-photo"
+                width="264"
+                alt="Mark Guerrero"
+              />
+              <h3 class="team-item">Mark Guerrero</h3>
+              <p class="team-text">Product Designer</p>
+            </li>
+            <li class="team-photo">
+              <img
+                src="images/img-9-2.jpg"
+                class="team-photo"
+                width="264"
+                alt="Tom Ford"
+              />
+              <h3 class="team-item">Tom Ford</h3>
+              <p class="team-text">Frontend Developer</p>
+            </li>
+            <li class="team-photo">
+              <img
+                src="images/img-10-2.jpg"
+                class="team-photo"
+                width="264"
+                alt="Camila Garcia"
+              />
+              <h3 class="team-item">Camila Garcia</h3>
+              <p class="team-text">Marketing</p>
+            </li>
+            <li class="team-photo">
+              <img
+                src="images/img-11-2.jpg"
+                class="team-photo"
+                width="264"
+                alt="Daniel Wilson"
+              />
+              <h3 class="team-item">Daniel Wilson</h3>
+              <p class="team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--our portfolio-->
-      <section class="our-portfolio">
-        <h2 class="our-portfolio-title">Our Portfolio</h2>
-        <ul class="our-portfolio-list">
-          <li class="our-portfolio-picture">
-            <img
-              src="./images/img-2-2.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="our-portfolio-item">Banking App</h3>
-            <p class="our-portfolio-text">App</p>
-          </li>
-          <li class="our-portfolio-picture">
-            <img
-              src="./images/img-3-2.jpg"
-              alt="Cashless payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="our-portfolio-item">Cashless Payment</h3>
-            <p class="our-portfolio-text">Marketing</p>
-          </li>
-          <li class="our-portfolio-picture">
-            <img
-              src="./images/img-4-2.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="our-portfolio-item">Meditation App</h3>
-            <p class="our-portfolio-text">App</p>
-          </li>
-          <li class="our-portfolio-picture">
-            <img
-              src="./images/img-5-2.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="our-portfolio-item">Taxi Service</h3>
-            <p class="our-portfolio-text">Marketing</p>
-          </li>
-          <li class="our-portfolio-picture">
-            <img
-              src="./images/img-6-2.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="our-portfolio-item">Screen Illustrations</h3>
-            <p class="our-portfolio-text">Design</p>
-          </li>
-          <li class="our-portfolio-picture">
-            <img
-              src="./images/img-7-2.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="our-portfolio-item">Online Courses</h3>
-            <p class="our-portfolio-text">Marketing</p>
-          </li>
-        </ul>
+      <section class="our-portfolio section">
+        <div class="container">
+          <h2 class="our-portfolio-title">Our Portfolio</h2>
+          <ul class="our-portfolio-list">
+            <li class="our-portfolio-picture">
+              <img
+                src="./images/img-2-2.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h3 class="our-portfolio-item">Banking App</h3>
+              <p class="our-portfolio-text">App</p>
+            </li>
+            <li class="our-portfolio-picture">
+              <img
+                src="./images/img-3-2.jpg"
+                alt="Cashless payment"
+                width="360"
+                height="300"
+              />
+              <h3 class="our-portfolio-item">Cashless Payment</h3>
+              <p class="our-portfolio-text">Marketing</p>
+            </li>
+            <li class="our-portfolio-picture">
+              <img
+                src="./images/img-4-2.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <h3 class="our-portfolio-item">Meditation App</h3>
+              <p class="our-portfolio-text">App</p>
+            </li>
+            <li class="our-portfolio-picture">
+              <img
+                src="./images/img-5-2.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h3 class="our-portfolio-item">Taxi Service</h3>
+              <p class="our-portfolio-text">Marketing</p>
+            </li>
+            <li class="our-portfolio-picture">
+              <img
+                src="./images/img-6-2.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h3 class="our-portfolio-item">Screen Illustrations</h3>
+              <p class="our-portfolio-text">Design</p>
+            </li>
+            <li class="our-portfolio-picture">
+              <img
+                src="./images/img-7-2.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h3 class="our-portfolio-item">Online Courses</h3>
+              <p class="our-portfolio-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!--footer section-->
     <footer class="footer">
-      <section>
+      <div class="container">
         <a class="logo-footer" href="index.html"
           >WEB<span class="color-studio-footer">STUDIO</span></a
         >
@@ -207,7 +226,7 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
-      </section>
+      </div>
     </footer>
   </body>
 </html>
