--- a/index.html
+++ b/index.html
@@ -104,44 +104,44 @@
         <div class="container">
           <h2 class="our-team-section">Our Team</h2>
           <ul class="our-team-list">
-            <li class="team-photo">
+            <li class="team-item">
               <img
                 src="images/img-8-2.jpg"
                 class="team-photo"
                 width="264"
                 alt="Mark Guerrero"
               />
-              <h3 class="team-item">Mark Guerrero</h3>
+              <h3 class="team-name">Mark Guerrero</h3>
               <p class="team-text">Product Designer</p>
             </li>
-            <li class="team-photo">
+            <li class="team-item">
               <img
                 src="images/img-9-2.jpg"
                 class="team-photo"
                 width="264"
                 alt="Tom Ford"
               />
-              <h3 class="team-item">Tom Ford</h3>
+              <h3 class="team-name">Tom Ford</h3>
               <p class="team-text">Frontend Developer</p>
             </li>
-            <li class="team-photo">
+            <li class="team-item">
               <img
                 src="images/img-10-2.jpg"
                 class="team-photo"
                 width="264"
                 alt="Camila Garcia"
               />
-              <h3 class="team-item">Camila Garcia</h3>
+              <h3 class="team-name">Camila Garcia</h3>
               <p class="team-text">Marketing</p>
             </li>
-            <li class="team-photo">
+            <li class="team-item">
               <img
                 src="images/img-11-2.jpg"
                 class="team-photo"
                 width="264"
                 alt="Daniel Wilson"
               />
-              <h3 class="team-item">Daniel Wilson</h3>
+              <h3 class="team-name">Daniel Wilson</h3>
               <p class="team-text">UI Designer</p>
             </li>
           </ul>
@@ -152,64 +152,70 @@
         <div class="container">
           <h2 class="our-portfolio-title">Our Portfolio</h2>
           <ul class="our-portfolio-list">
-            <li class="our-portfolio-picture">
+            <li class="our-portfolio-item">
               <img
+                class="our-portfolio-picture"
                 src="./images/img-2-2.jpg"
                 alt="Banking App"
                 width="360"
                 height="300"
               />
-              <h3 class="our-portfolio-item">Banking App</h3>
+              <h3 class="our-portfolio-name">Banking App</h3>
               <p class="our-portfolio-text">App</p>
             </li>
-            <li class="our-portfolio-picture">
+            <li class="our-portfolio-item">
               <img
+                class="our-portfolio-picture"
                 src="./images/img-3-2.jpg"
                 alt="Cashless payment"
                 width="360"
                 height="300"
               />
-              <h3 class="our-portfolio-item">Cashless Payment</h3>
+              <h3 class="our-portfolio-name">Cashless Payment</h3>
               <p class="our-portfolio-text">Marketing</p>
             </li>
-            <li class="our-portfolio-picture">
+            <li class="our-portfolio-item">
               <img
+                class="our-portfolio-picture"
                 src="./images/img-4-2.jpg"
                 alt="Meditation App"
                 width="360"
                 height="300"
               />
-              <h3 class="our-portfolio-item">Meditation App</h3>
+              <h3 class="our-portfolio-name">Meditation App</h3>
               <p class="our-portfolio-text">App</p>
             </li>
-            <li class="our-portfolio-picture">
+            <li class="our-portfolio-item">
               <img
+                class="our-portfolio-picture"
                 src="./images/img-5-2.jpg"
                 alt="Taxi Service"
                 width="360"
                 height="300"
               />
-              <h3 class="our-portfolio-item">Taxi Service</h3>
+              <h3 class="our-portfolio-name">Taxi Service</h3>
               <p class="our-portfolio-text">Marketing</p>
             </li>
-            <li class="our-portfolio-picture">
+            <li class="our-portfolio-item">
               <img
+                class="our-portfolio-picture"
                 src="./images/img-6-2.jpg"
                 alt="Screen Illustrations"
                 width="360"
                 height="300"
               />
-              <h3 class="our-portfolio-item">Screen Illustrations</h3>
+              <h3 class="our-portfolio-name">Screen Illustrations</h3>
               <p class="our-portfolio-text">Design</p>
             </li>
-            <li class="our-portfolio-picture">
+            <li class="our-portfolio-item">
               <img
+                class="our-portfolio-picture"
                 src="./images/img-7-2.jpg"
                 alt="Online Courses"
                 width="360"
                 height="300"
               />
-              <h3 class="our-portfolio-item">Online Courses</h3>
+              <h3 class="our-portfolio-name">Online Courses</h3>
               <p class="our-portfolio-text">Marketing</p>
             </li>
           </ul>
